Adding Object data modules

--- a/views/subscribe.ejs
+++ b/views/subscribe.ejs
@@ -125,6 +125,9 @@
                 </div>
                     <!-- <p class="display-4 col">From <%= North.root.station[0].name %></p> -->
                     <br>
+                    <select>
+            
+                    </select>
                 <button 
                 class="bg-primary text-warning " type="submit">
                 North</button>
@@ -136,4 +139,5 @@
             </form>
             </div>
         </div>
+
 </div>
