--- a/views/subscribe.ejs
+++ b/views/subscribe.ejs
@@ -123,21 +123,21 @@
                     aria-describedby="Station-Label">
                 </div>
                 </div>
-                    <!-- <p class="display-4 col">From <%= North.root.station[0].name %></p> -->
                     <br>
-                    <select>
-            
-                    </select>
+                    
                 <button 
-                class="bg-primary text-warning " type="submit">
-                North</button>
+                class="bg-primary text-warning " type="submit" > 
+                <%# onclick="location.href=toString(destination)" %> 
+               <%# intended to call the api again to keep the data active if added to the submit functionality above %> 
+
+                North
+                </button>
                 <button 
-                class="bg-warning text-primary " type="submit">
+                class="bg-warning text-primary " type="submit" >
                 South</button>
             </div>
         </fieldset>
             </form>
             </div>
         </div>
-
 </div>
