--- a/views/subscribe.ejs
+++ b/views/subscribe.ejs
@@ -11,10 +11,10 @@
     class="collapse" 
     aria-labelledby="subscriptionBox" 
     data-parent="#accordion">
-        <p class="text-primary text-center"> 
-        We can send your dialy boarding information to you so you never get surprised by a late train again</p>
+        <p class="text-primary text-center display-1"> 
+        Subscribe to your most used stations</p>
         <fieldset>
-            <legend>This</legend>
+            <legend>Schedule alerts that tell you when your train is arriving, or if there are delays in your commute</legend>
         <form 
         class="card-body btn collapsed" data-toggle="collapse" 
         data-parent="accordion">
@@ -114,27 +114,43 @@
                     <label
                     class="input-group-prepend text-primary"
                     id="Station-Label"
-                    >Station </label>
-                    <input 
-                    class=""
-                    type="search" 
-                    placeholder="<%= North.root.station[0].name %>"
-                    aria-label="Station"
-                    aria-describedby="Station-Label">
+                    >Station Start </label>
+                        <input list="stationSelector"       
+                            placeholder="<%= North.root.station[0].name %>"
+                            aria-label="Station selector"
+                            aria-describedby="Station-Label">
+                            
+                            
+                            <%# DATALIST %> 
+                            <datalist id="stationSelector">
+                                <option value="19th"> 12th Street </option>
+                                <option value="12th"> 19th Street </option>
+                                <option 
+                                aria-placeholder="West Oakland" 
+                                placeholder="West Oakland" 
+                                value="woak"> West Oakland </option>
+                            </datalist>
+
+                        <br>
+
+                            <label
+                            class="input-group-prepend text-primary"
+                            id="EndStation-Label"
+                            >Station End </label>
+                                <input list="stationSelector"       
+                                    placeholder="<%= North.root.station[0].name %>"
+                                    aria-label="End Station selector"
+                                    aria-describedby="End Station-Label">
+                            
+
+                    
                 </div>
                 </div>
                     <br>
                     
                 <button 
-                class="bg-primary text-warning " type="submit" > 
-                <%# onclick="location.href=toString(destination)" %> 
-               <%# intended to call the api again to keep the data active if added to the submit functionality above %> 
-
-                North
-                </button>
-                <button 
                 class="bg-warning text-primary " type="submit" >
-                South</button>
+                Schedule</button>
             </div>
         </fieldset>
             </form>
