Preparing to Embed Courrier functionality

--- a/views/accordion.ejs
+++ b/views/accordion.ejs
@@ -564,7 +564,7 @@
             role="group"
             aria-label="Btn-Group"
           >
-          <img src="map.png" class="img-fluid" alt="Bart System Map">
+          <img src="map.png" class="img-fluid rounded" alt="Bart System Map">
           </div>
         </div>
       </div>
