added Coiurrier API support, debugged the courier auth errors

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,65 @@
 
     <!-- Updated Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-   
+    <script>
+    window.norf = { 
+    ashb :  'Ashby (Berkeley)' ,
+    antc :  'Antioch' ,
+    conc :  'Concord' ,
+    rock :  'Rockridge' ,
+    lafy :  'Lafayette' ,
+    orin :  'Orinda' ,
+    pitt :  'Pittsburg/Bay Point' ,
+    pctr :  'Pittsburg Center' ,
+    phil :  'Pleasant Hill' ,
+    rich :  'Richmond' ,
+    dbrk :  'Downtown Berkeley' ,
+    dubl :  'Dublin/Pleasanton' ,
+    deln :  'El Cerrito del Norte' ,
+    plza :  'El Cerrito Plaza' ,
+    hayw :  'Hayward' ,
+    frmt :  'Fremont' ,
+    shay :  'South Hayward',
+    nbrk :  'North Berkeley' ,
+    ncon :  'North Concord/Martinez' ,
+    wcrk :  'Walnut Creek' ,
+    wdub :  'West Dublin' ,
+    ucty :  'Union City' 
+    };        
+    window.oakl = {
+    '12th' :  "12th St. Oakland City Center" ,
+    '19th' :  "19th St. Oakland ",
+    cols :  "Coliseum" ,
+    ftvl :  'Fruitvale' ,
+    lake :  'Lake Merritt' ,
+    mcar :  'MacArthur ',
+    oakl :  'Oakland Intl Airport' ,
+    woak :  'West Oakland ' 
+    };
+    window.souf = {
+    sanl :  'San Leandro' ,
+    warm :  'Warm Springs/South Fremont' ,
+    bayf :  'Bay Fair (San Leandro)' ,
+    bery :  'Berryessa' ,
+    cast :  'Castro Valley' 
+    };
+    sanfran = {
+    '16th' :  '16th St. Mission' ,
+    '24th' :  '24th St. Mission' ,
+    balb :  'Balboa Park' ,
+    colm :  'Colma' ,
+    civc :  'Civic Center' ,
+    daly :  'Daly City' ,
+    embr :  'Embarcadero' ,
+    glen :  'Glen Park' ,
+    powl :  'Powell St.' ,
+    mlpt :  'Milpitas' ,
+    mont :  'Montgomery St.' ,
+    mlbr :  'Millbrae' ,
+    ssan :  'South San Francisco' ,
+    sbrn :  'San Bruno' ,
+    sfia :  'SF Intl Airport '
+    };   </script>
 
 
     <link rel="icon" type="img/png" src="/static/bartIcon.png">
