adding new stations

--- a/views/accordion.ejs
+++ b/views/accordion.ejs
@@ -424,6 +424,14 @@
           aria-label="Btn-Group"
         >
           <button
+            onclick="location.href='bery'"
+            type="button"
+            class="btn btn-dark"
+            value="bery"
+          >
+            Berryessa / North San Jose
+          </button>
+          <button
             onclick="location.href='bayf'"
             type="button"
             class="btn btn-dark"
@@ -464,6 +472,16 @@
           >
             Hayward
           </button>
+
+          <button
+            onclick="location.href='mlpt'"
+            type="button"
+            class="btn btn-dark"
+            value="mlpt"
+          >
+            Milpitas
+          </button>
+
           <button
             onclick="location.href='phil'"
             type="button"
